style: _var.scss 增加字距 letter-spacing

--- a/src/sass/base/_var.scss
+++ b/src/sass/base/_var.scss
@@ -16,3 +16,9 @@ $p : 15px;
 
 $h5-line-height: 38px;
 $p-line-height: 24px;
+
+// ======== 字距 ========
+$h2-letter-spacing: 6px;
+$h3-letter-spacing: 3px;
+$h4-letter-spacing: 3px;
+$h5-letter-spacing: 2px;
