style: head.html 新增中英字體link

--- a/src/layout/nav.html
+++ b/src/layout/nav.html
@@ -1,6 +1,6 @@
 <nav>
-    <h1></h1>
+    <h1>logo</h1>
     <ul>
-        <li></li>
+        <li><a href="animal.html">Sìkha動物</a></li>
     </ul>
 </nav>
