style : 新增顏色 , 新增margin的變數

--- a/src/layout/head.html
+++ b/src/layout/head.html
@@ -1,4 +1,6 @@
+@import('../sass/style.scss')
 <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@@title</title>
+    @@include('../sass/style.scss')
