--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 @import 'base/var';
 @import 'base/reset';
 @import 'mixin/space';
+@import 'mixin/mixin';
 @import 'layout/login';
 @import 'layout/nav';
 @import 'layout/footer';
