--- a/src/layout/nav.html
+++ b/src/layout/nav.html
@@ -1,5 +1,5 @@
 <nav>
-    <h1>logo</h1>
+    <h1><img src="../img/logo_16B1AA.svg" alt=""></h1>
     <ul>
         <li><a href="animal.html">Sìkha動物</a></li>
     </ul>
