style: _mixin.scss 增加pad和mobile

--- a/src/sass/mixin/_mixin.scss
+++ b/src/sass/mixin/_mixin.scss
@@ -14,3 +14,15 @@
     background-color: $color_W;
     @content;
 }
+
+// ===== Media query =====
+@mixin pad{
+    @media (max-width: 767.98px){
+      @content;
+    }
+  }
+  @mixin mobile{
+    @media (max-width: 575.98px){
+      @content;
+    }
+  }
