--- a/src/sass/base/_var.scss
+++ b/src/sass/base/_var.scss
@@ -10,14 +10,15 @@ $color_B:#454545;
 
 $h2: 64px;
 $h3: 48px;
-$h4: 64px;
+$h4: 36px;
 $h5: 24px;
-$p : 15px;
+$p: 15px;
+$h6: 110px;
 
 // ======== 行高 ========
 
-$h5_LH: 38px;
-$p_LH: 24px;
+$h5_lh: 38px;
+$p_lh: 24px;
 
 // ======== 字距 ========
 
