feat: footer 初步完成

--- a/src/layout/footer.html
+++ b/src/layout/footer.html
@@ -1,3 +1,27 @@
 <footer>
-    <h1></h1>
+    <!-- <img src="./img/material/footer_tree.svg" alt="" class="footersvg tree1">
+    <img src="./img/material/footer_tree.svg" alt="" class="footersvg tree2">
+    <img src="./img/material/footer_cow.svg" alt="" class="footersvg cow1">
+    <img src="./img/material/footer_cow.svg" alt="" class="footersvg cow2"> -->
+
+    <!-- <img src="./img/material/footerdec.png" alt="" class="footerdec">
+    <img src="./img/material/hilltop.svg" alt="" class="hilltop"> -->
+
+    <img src="./img/material/ftop.png" alt="" class="ftop">
+    <div class="footerbg">
+        <div class="footermain wrapper">
+            <h1 class="footerLogo"><img src="./img/logo_white.svg" alt=""></h1>
+            <div class="footerInfo">
+                <p>049-260-8866</p>
+                <p>546南投縣仁愛鄉仁和路166號</p>
+            </div>
+            <div class="socialMediaIcons">
+                <img src="./img/icon/youtube.svg" alt="" class="footerIcon">
+                <img src="./img/icon/facebook.svg" alt="" class="footerIcon">
+                <img src="./img/icon/instagram.svg" alt="" class="footerIcon">
+            </div>
+        </div>
+        <p class="tibameMessage">本網站為緯育TibaMe前端設計工程師班第105期第六組學員專題成果作品，本平台僅供學習、展示之用。參考資源：<a href="">六甲山牧場</a>、<a href="">清境農場</a>。</p>
+    </div>
+
 </footer>
