style: style.scss修改路徑

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,6 +5,6 @@
 @import 'base/typography';
 @import 'mixin/space';
 @import 'layout/login';
-@import 'layout/nav';
+@import 'layout/header';
 @import 'layout/footer';
 @import 'page/index';
