feat: header 初步完成

--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -1,6 +1,17 @@
-<header>
-    <nav>
-        <h1><a href="index.html"><img src="../img/logo_16B1AA.svg" alt="Sìkha牧場"></a></h1>
+<header class="frontHeader">
+    <nav class="main_sel">
+        <h1><a href="index.html"><img src="../img/logo_16B1AA.svg" alt="Sìkha牧場" class="headerLogo"></a></h1>
+        <div class="navRight">
+            <img src="img/icon/cart_icon.svg" alt="" class="cartIcon">
+            <img src="img/icon/member_icon.svg" alt="" class="memberIcon">
+            <nav class="ham_sel">
+                <div class="ham_btn">
+                    <span class="ham_line ham_line_1"></span>
+                    <span class="ham_line ham_line_2"></span>
+                    <span class="ham_line ham_line_3"></span>
+                </div>
+            </nav>   
+        </div>
         <!-- <ul>
             <li><a href="animal.html">Sìkha動物</a></li>
         </ul> -->
