--- a/src/layout/footer.html
+++ b/src/layout/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="frontFooter">
     <!-- <img src="./img/material/footer_tree.svg" alt="" class="footersvg tree1">
     <img src="./img/material/footer_tree.svg" alt="" class="footersvg tree2">
     <img src="./img/material/footer_cow.svg" alt="" class="footersvg cow1">
@@ -25,3 +25,5 @@
     </div>
 
 </footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="js/header.min.js"></script>
