--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,37 +1,37 @@
 h2{
-    font-size: $h2;
-    letter-spacing: $h2-letter-spacing;
+    font-size: $fs-xl;
+    letter-spacing: $letter-spacing-6;
 
     @include mobile{
-        font-size: 36px;
+        font-size: $fs-m;
         letter-spacing: 5px;
     }
 }
 
 h3{
-    font-size: $h3;
-    letter-spacing: $h3-letter-spacing;
+    font-size: $fs-l;
+    letter-spacing: $letter-spacing-3;
 
     @include mobile{
-        font-size: 24px;
-        letter-spacing: 3px;
+        font-size: $fs-s;
+        letter-spacing: $letter-spacing-3;
     }
 }
 
 h4{
-    font-size: $h4;
-    letter-spacing: $h4-letter-spacing;
+    font-size: $fs-m;
+    letter-spacing: $letter-spacing-3;
 
     @include mobile{
-        font-size: 24px;
-        letter-spacing: 2px;
+        font-size: $fs-s;
+        letter-spacing: $letter-spacing-2;
     }
 }
 
 h5{
-    font-size: $h5;
-    line-height: $h5_lh;
-    letter-spacing: $h5-letter-spacing;
+    font-size: $fs-s;
+    line-height: $LH-38;
+    letter-spacing: $letter-spacing-2;
 
     @include mobile{
         font-size: 18px;
@@ -41,22 +41,28 @@ h5{
 }
 
 p{
-    font-size: $p;
-    line-height: $p_lh;
+    font-size: $fs-xs;
+    line-height: $LH-24;
+    letter-spacing: $letter-spacing-2;
 
     @include mobile{
-        font-size: 12px;
+        font-size: $fs-2xs;
         line-height: 20px;
     }
 }
 
 //英文字
 h6{
-    font-size: $h6;
+    font-size: $fs-2xl;
     font-family: Oswald;
 
     @include mobile{
-        font-size: 64px;
+        font-size: $fs-xl;
         line-height: 70px;
     }
+}
+
+a{
+    text-decoration: none;
+    color: $color_W;
 }
