--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,6 +1,6 @@
 h2{
-    font-size: $h2;
-    letter-spacing: $h2-letter-spacing;
+    font-size: $fs-xl;
+    letter-spacing: $letter-spacing-6;
 
     @include mobile{
         font-size: 36px;
@@ -9,8 +9,8 @@ h2{
 }
 
 h3{
-    font-size: $h3;
-    letter-spacing: $h3-letter-spacing;
+    font-size: $fs-l;
+    letter-spacing: $letter-spacing-3;
 
     @include mobile{
         font-size: 24px;
@@ -19,8 +19,8 @@ h3{
 }
 
 h4{
-    font-size: $h4;
-    letter-spacing: $h4-letter-spacing;
+    font-size: $fs-m;
+    letter-spacing: $letter-spacing-2;
 
     @include mobile{
         font-size: 24px;
@@ -29,9 +29,9 @@ h4{
 }
 
 h5{
-    font-size: $h5;
-    line-height: $h5_lh;
-    letter-spacing: $h5-letter-spacing;
+    font-size: $fs-s;
+    line-height: $LH-38;
+    letter-spacing: $letter-spacing-2;
 
     @include mobile{
         font-size: 18px;
@@ -41,8 +41,8 @@ h5{
 }
 
 p{
-    font-size: $p;
-    line-height: $p_lh;
+    font-size: $fs-xs;
+    line-height: $LH-24;
 
     @include mobile{
         font-size: 12px;
@@ -52,8 +52,8 @@ p{
 
 //英文字
 h6{
-    font-size: $h6;
-    font-family: Oswald;
+    font-size: $fs-2xl;
+    font-family: $fontfamily;
 
     @include mobile{
         font-size: 64px;
