--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,5 +7,4 @@
 @import 'layout/login';
 @import 'layout/header';
 @import 'layout/footer';
-@import 'page/index';
-@import 'layout/back.nav';
+@import 'frontpages/index';
