--- a/src/layout/back_aside.html
+++ b/src/layout/back_aside.html
@@ -1,7 +1,7 @@
 <aside>
     <ul>
         <img src="../img/logo_white.svg" class="logo">
-        <li><a href="#">會員查詢</a></li>
+        <li><a href="../member_mg.html">會員查詢</a></li>
         <li><a href="#">最新消息管理</a></li>
         <li><a href="#">商品管理</a></li>
         <li><a href="#">訂單管理</a></li>
