style: utility.scss 新增 .wrapper, 刪除wrapper的mixin

--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -1,5 +1,5 @@
 <header class="frontHeader">
-    <nav class="main_sel">
+    <nav class="main_sel wrapper">
         <h1><a href="index.html"><img src="../img/logo_16B1AA.svg" alt="Sìkha牧場" class="headerLogo"></a></h1>
         <div class="navRight">
             <img src="img/icon/cart_icon.svg" alt="" class="cartIcon">
