--- a/src/sass/base/_utility.scss
+++ b/src/sass/base/_utility.scss
@@ -6,3 +6,9 @@ body{
     color: #454545;
     font-family: $fontfamily;
 }
+
+.wrapper{
+    width: 1100px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
