--- a/src/sass/style.back.scss
+++ b/src/sass/style.back.scss
@@ -5,4 +5,4 @@
 @import 'base/typography';
 @import 'mixin/space';
 @import 'layout/back.aside';
-@import 'page/member_mg';
+@import 'backpages/member_mg';
