--- a/src/layout/footer.html
+++ b/src/layout/footer.html
@@ -21,7 +21,7 @@
                 <img src="./img/icon/instagram.svg" alt="" class="footerIcon">
             </div>
         </div>
-        <p class="tibameMessage">本網站為緯育TibaMe前端設計工程師班第105期第六組學員專題成果作品，本平台僅供學習、展示之用。參考資源：<a href="">六甲山牧場</a>、<a href="">清境農場</a>。</p>
+        <p class="tibameMessage wrapper">本網站為緯育TibaMe前端設計工程師班第105期第六組學員專題成果作品，本平台僅供學習、展示之用。參考資源：<a href="">六甲山牧場</a>、<a href="">清境農場</a>。</p>
     </div>
 
 </footer>
