--- a/src/sass/backpages/_member_mg.scss
+++ b/src/sass/backpages/_member_mg.scss
@@ -1,5 +1,16 @@
-member_mg{
-    .wrapper{
-        width: calc(100% - 20%);
+.wrapper{
+    @include borderTest($borderc:blue); // 測試線
+    padding: 0;
+    display: grid;
+    grid-template-columns: 20% 80%;
+    .main{
+        h4{
+            @include textCenter();
+            margin-top: 20px;
+        }
+        .titleBar{
+            display: flex;
+        }
     }
+    
 }
