--- a/src/sass/base/_utility.scss
+++ b/src/sass/base/_utility.scss
@@ -3,12 +3,13 @@
 }
 
 body{
+    width: 100%;
     color: #454545;
     font-family: $fontfamily;
 }
 
 .wrapper{
-    width: 1100px;
+    width: 1200px;
     margin: 0 auto;
     padding: 0 10px;
 }
