--- a/src/sass/layout/_back.aside.scss
+++ b/src/sass/layout/_back.aside.scss
@@ -1,13 +1,12 @@
 aside{
     background-color: $color_G;
-    width: 20%;
-    height: 100vh;
+    // width: 20%;
+    // height: 100vh;
     align-items: center;
-    display: flex;
-    position: fixed;
-    left: 0;
-    top: 0;
-    img{
+    grid-row-start: 1;
+    grid-row-end: 3;
+    @include borderTest(); //測試線
+    .logo{
         width: 185px;
         margin: 60px auto;
     }
