style: style_scss import Bootstrap, 刪除wrapper

--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -1,9 +1,10 @@
 <header class="frontHeader">
-    <nav class="main_sel wrapper">
+    <nav class="main_sel container-lg">
         <h1><a href="index.html"><img src="../img/logo_16B1AA.svg" alt="Sìkha牧場" class="headerLogo"></a></h1>
         <div class="navRight">
-            <img src="img/icon/cart_icon.svg" alt="" class="cartIcon">
-            <img src="img/icon/member_icon.svg" alt="" class="memberIcon">
+            <a href="#"><img src="img/icon/cart_icon.svg" alt="" class="cartIcon"></a>
+            <a href="member.html"><img src="img/icon/member_icon.svg" alt="" class="memberIcon"></a>
+            <font-awesome-icon icon="fa-solid fa-cart-shopping" />
             <nav class="ham_sel">
                 <div class="ham_btn">
                     <span class="ham_line ham_line_1"></span>
