--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,3 +8,4 @@
 @import 'layout/header';
 @import 'layout/footer';
 @import 'frontpages/index';
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
