feat:新增功能data: 增加圖片

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,3 +9,4 @@
 @import 'layout/footer';
 @import 'frontpages/index';
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
+@import './frontpages/news.scss';
