--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,3 +9,4 @@
 @import 'layout/footer';
 @import 'frontpages/index';
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
