--- a/src/sass/backpages/_back_login.scss
+++ b/src/sass/backpages/_back_login.scss
@@ -1,100 +1,127 @@
+
 .bl_bg{
+    background-image: url(../../img/backpages/back_home_bg.jpg);
+    background-size: cover;
+    background-position: 100% 77%;
+    background-repeat: no-repeat;
+    z-index: -1;
+    background-attachment: fixed;
+
     
-}
-
-
-
-
-.bl_wrapper{
-    margin: 40px auto;
-    width: 600px;
-    height: 500px;
-    border: 1px solid black;
-    background-color:$color_W ;
-    // @include marginCenter();
-    border-radius: 8px;
     
-
-}
-//LOGO
-.logo{
-    @include borderTest();
-    @include textCenter;
-    @include marginCenter();
-    display: block;
-    max-width: 300px;
-    padding-top: 60px;
-
-}
-
-//標題
-.bl_title{
-    @include textCenter;
-    color:$color_G ;
-    font-size: $fs-l;
-    margin-top: 60px;
-    border: 1px solid green;
-}
-
-//輸入頁
-.bl_login{
-
-font-size: $fs-s;
-@include marginCenter();
-@include textCenter();
-border: 1px solid blue;
-
-}
-
-.group{
-   
-    display: block;
-    @include marginCenter();
-    margin-top: 20px;
-    margin-right: 110px;
-   
-}
-
-label{
-    display: inline-block;
-    width: 100px;
-    text-align: right;
-}
-
-#username ,#password{
-    border: 1px solid red;
-    width: 300px;
-    height: 44px;
-    border-radius: 4px;
-    display: inline-block;
-    // margin: 0 auto;
-}
-
-//按鈕
-.bl_btn{
-    border: 1px solid orange;
-    background-color: $color_G;
-    color: $color_W;
-    font-size: $fs-s;
-    width: 300px;
-    height: 44px;
-    border-radius: 4px;
-    display: block;
-    margin: 0 auto;
-    margin-top: 40px;
-    cursor: pointer;
     
+    .b_bg{
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    
+        .bl_out{
+            
+            // margin-top: 40px;
+            // margin: 20px auto;
+            // margin: 0 auto;
+            width: 560px;
+            height: 450px;
+            // border: 1px solid black;
+            background-color:$color_W ;
+            @include marginCenter();
+            border-radius: 8px;
+            
+        }
+
+        
+
+        
+        //LOGO
+        .logo{
+            @include borderTest();
+            @include textCenter;
+            @include marginCenter();
+            display: block;
+            max-width: 300px;
+            padding-top: 60px;
+
+        }
+
+        //標題
+        .bl_title{
+            @include textCenter;
+            color:$color_G ;
+            font-size: $fs-l;
+            margin-top: 60px;
+            border: 1px solid green;
+        }
+
+        //輸入頁
+        .bl_login{
+
+        font-size: $fs-s;
+        @include marginCenter();
+        @include textCenter();
+        border: 1px solid blue;
+
+        }
+
+        .group{
+        
+            display: block;
+            @include marginCenter();
+            margin-top: 20px;
+            margin-right: 110px;
+        
+        }
+
+        label{
+            display: inline-block;
+            width: 100px;
+            text-align: right;
+        }
+
+        #username ,#password{
+            border: 1px solid red;
+            width: 300px;
+            height: 44px;
+            border-radius: 4px;
+            display: inline-block;
+            // margin: 0 auto;
+        }
+
+        //按鈕
+        .bl_btn{
+            border: 1px solid orange;
+            background-color: $color_G;
+            color: $color_W;
+            font-size: $fs-s;
+            width: 300px;
+            height: 44px;
+            border-radius: 4px;
+            display: block;
+            margin: 0 auto;
+            margin-top: 40px;
+            cursor: pointer;
+
+        }
+
+        .bl_btn:hover{
+            background-color: $color_Y;
+            color: $color_W;
+            font-size: $fs-s;
+            width: 300px;
+            height: 44px;
+            border-radius: 4px;
+            display: block;
+            margin: 0 auto;
+            margin-top: 40px;
+
+        } 
+        .b_p{
+            position: absolute;
+            bottom: 12px;
+            width: 100%;
+            text-align: center;
+            color: white;
+        }
 }
 
-.bl_btn:hover{
-    background-color: $color_Y;
-    color: $color_W;
-    font-size: $fs-s;
-    width: 300px;
-    height: 44px;
-    border-radius: 4px;
-    display: block;
-    margin: 0 auto;
-    margin-top: 40px;
-    
-} 
+}
