--- a/src/sass/backpages/_member_mg.scss
+++ b/src/sass/backpages/_member_mg.scss
@@ -15,6 +15,7 @@
         background-color: $color_G;
         color: $color_W;
         padding: 20px;
+        // border: 1px solid $color_G;
     }
     .search{
         padding-top: 20px;
