feat: footer RWD 完成

--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -2,9 +2,8 @@
     <nav class="main_sel container-lg">
         <h1><a href="index.html"><img src="../img/logo_16B1AA.svg" alt="Sìkha牧場" class="headerLogo"></a></h1>
         <div class="navRight">
-            <a href="#"><img src="img/icon/cart_icon.svg" alt="" class="cartIcon"></a>
-            <a href="member.html"><img src="img/icon/member_icon.svg" alt="" class="memberIcon"></a>
-            <font-awesome-icon icon="fa-solid fa-cart-shopping" />
+            <a href="#" class="head-icon"><i class="bi bi-cart2 cartIcon"><span class="cartCount">1</span></i></a>
+            <a href="member.html" class="head-icon"><i class="bi bi-person memberIcon"></i></a>
             <nav class="ham_sel">
                 <div class="ham_btn">
                     <span class="ham_line ham_line_1"></span>
