--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,5 +1,6 @@
 .frontFooter{
     position: relative;
+    width: 100%;
 
     // .footersvg{
     //     color: $color_B;
@@ -39,10 +40,12 @@
     .ftop{
         width: 100%;
         display: block;
+        margin-top: 100px;
     }
 
     .footerbg{
-        height: 300px;
+        width: 100%;
+        // height: 300px;
         background-color: $color_G;
 
         
@@ -52,12 +55,24 @@
             justify-content: space-between;
             align-items: center;
 
+            @include pad(){
+                flex-direction: column;
+    
+            }
+
             .footerLogo{
                 flex-grow: 1.2;
                 flex-basis: 0;
 
                 img{
-                    width: 280px;
+                    width: 230px;
+                    @include mobile(){
+                        width: 150px;
+                    }
+                }
+
+                @include pad(){
+                    order: 1;
                 }
             }
 
@@ -65,9 +80,18 @@
                 flex-grow: 1;
                 flex-basis: 0;
 
+                @include pad(){
+                    order: 3;
+                }
+
                 p{
-                    margin-bottom: 10px;
+                    margin-bottom: 5px;
                     color: $color_W;
+
+                    @include pad(){
+                        text-align: center;
+                        margin-top: 15px;
+                    }
                 }
             }
     
@@ -77,10 +101,24 @@
                 flex-basis: 0;
                 justify-content: space-evenly;
                 flex-grow: 0.8;
+                
+                @include pad(){
+                    order: 2;
+                    margin-top: 20px;
+                }
 
                 .footerIcon{
-                    width: 50px;
+                    width: 45px;
+                    transition: .5s;
+                    &:hover{
+                        opacity: .7;
+                    }
+
+                    @include pad(){
+                        margin: 0 10px;
+                    }
                 }
+
             }
             
         }
@@ -88,6 +126,11 @@
             @include textCenter();
             color: $color_W;
             margin-top: 90px;
+            padding-bottom: 50px;
+
+            @include pad(){
+                margin-top: 30px;
+            }
         }
     }
 }
