--- a/src/sass/backpages/_back_login.scss
+++ b/src/sass/backpages/_back_login.scss
@@ -1,4 +1,3 @@
-
 .bl_bg{
     background-image: url(../../img/backpages/back_home_bg.jpg);
     background-size: cover;
@@ -6,122 +5,112 @@
     background-repeat: no-repeat;
     z-index: -1;
     background-attachment: fixed;
-
     
-    
-    
-    .b_bg{
+    .bl_out{
+        background-color: $color_W;
         position: fixed;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-    
-        .bl_out{
-            
-            // margin-top: 40px;
-            // margin: 20px auto;
-            // margin: 0 auto;
-            width: 560px;
-            height: 450px;
-            // border: 1px solid black;
-            background-color:$color_W ;
-            @include marginCenter();
-            border-radius: 8px;
-            
-        }
+        width: 560px;
+        height: 450px;
+        border-radius: 8px;
+    }
 
-        
-
-        
-        //LOGO
-        .logo{
-            @include borderTest();
-            @include textCenter;
-            @include marginCenter();
-            display: block;
-            max-width: 300px;
-            padding-top: 60px;
-
-        }
-
-        //標題
-        .bl_title{
-            @include textCenter;
-            color:$color_G ;
-            font-size: $fs-l;
-            margin-top: 60px;
-            border: 1px solid green;
-        }
-
-        //輸入頁
-        .bl_login{
-
-        font-size: $fs-s;
+    //LOGO
+    .bl_logo{
+        // @include borderTest();
+        // @include textCenter;
         @include marginCenter();
+        display: block;
+        width: 300px;
+        padding-top: 40px;
+
+    }
+
+    //標題
+    .out_cow{
         @include textCenter();
-        border: 1px solid blue;
+        margin-top: 40px;
+    }
+    .bl_title{
+        color:$color_G ;
+        font-size: 32px;
+        margin: 10px;
+        display: inline;
+        // border: 1px solid green;
+    }
 
-        }
+    .bl_cow{
+        display: inline;
 
-        .group{
-        
-            display: block;
-            @include marginCenter();
-            margin-top: 20px;
-            margin-right: 110px;
-        
-        }
+    }
+    //輸入頁
+    .bl_login{
+        font-size: $fs-s;
+        margin: 40px auto;
+        @include textCenter();
+    }
 
-        label{
-            display: inline-block;
-            width: 100px;
-            text-align: right;
-        }
+    .group{
+        display: block;
+        @include marginCenter();
+        margin-top: 20px;
+        margin-right: 110px;
+    }
 
-        #username ,#password{
-            border: 1px solid red;
-            width: 300px;
-            height: 44px;
-            border-radius: 4px;
-            display: inline-block;
-            // margin: 0 auto;
-        }
+    .user{
+        display: inline-block;
+        width: 100px;
+        text-align: right;
+    }
 
-        //按鈕
-        .bl_btn{
-            border: 1px solid orange;
-            background-color: $color_G;
-            color: $color_W;
-            font-size: $fs-s;
-            width: 300px;
-            height: 44px;
-            border-radius: 4px;
-            display: block;
-            margin: 0 auto;
-            margin-top: 40px;
-            cursor: pointer;
+    #username ,#password{
+        // border: 1px solid red;
+        width: 300px;
+        height: 44px;
+        border-radius: 4px;
+        display: inline-block;
+        border: 1px solid #C4C4C3;
+        padding-left: 10px;
+        // margin: 0 auto;
+    }
 
-        }
+    //按鈕
+    .bl_btn{
+        border: 1px solid $color_G;
+        background-color: $color_G;
+        color: $color_W;
+        font-size: $fs-s;
+        width: 300px;
+        height: 44px;
+        border-radius: 4px;
+        display: block;
+        margin: 0 auto;
+        margin-top: 40px;
+        cursor: pointer;
 
-        .bl_btn:hover{
-            background-color: $color_Y;
-            color: $color_W;
-            font-size: $fs-s;
-            width: 300px;
-            height: 44px;
-            border-radius: 4px;
-            display: block;
-            margin: 0 auto;
-            margin-top: 40px;
+    }
 
-        } 
-        .b_p{
-            position: absolute;
-            bottom: 12px;
-            width: 100%;
-            text-align: center;
-            color: white;
-        }
-}
+    .bl_btn:hover{
+        border: 1px solid $color_Y;
+        background-color: $color_Y;
+        color: $color_W;
+        font-size: $fs-s;
+        width: 300px;
+        height: 44px;
+        border-radius: 4px;
+        display: block;
+        margin: 0 auto;
+        margin-top: 40px;
 
+    } 
+    .b_p{
+        position: absolute;
+        bottom: 40px;
+        color: $color_W;
+        font-size: $fs-2xs;
+        text-align: center;
+        width: 100%;
+    }
 }
