feat:修改feat:新增news_min.html

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,3 +10,4 @@
 @import 'frontpages/index';
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
 @import './frontpages/news.scss';
+@import './frontpages/news_min.scss';
