--- a/src/sass/frontpages/news.scss
+++ b/src/sass/frontpages/news.scss
@@ -1,9 +1,21 @@
-.topimg{
-    margin: 0 auto;
-    min-width: 100%;
+
+.mainup{
+    max-width: 100%;
+    height: 550px;
+    background-image: url(../../img/news/gozha-net-xDrxJCdedcI-unsplash\ 1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    // border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.mainup h2{
+    color: white;
+    font-size: 64px;
 }
 
-main{
+.main_out{
     margin: 0 auto;
     width: 1100px;
     height: auto;
@@ -35,35 +47,35 @@ main{
 .main_min{
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
-}
-
-.main_div{
-    width: 100%;
-    display: flex;
     justify-content: space-around;
-    margin-bottom: 15px;
+    max-width: 100%;
 }
 
-.main_div .min_news{
+.main_min .min_news{
     width: 400px;
+    text-decoration: none;
+    margin-top: 10px;
 }
 
-.main_div h5{
+.main_min a{
+    color: black;
+}
+
+
+.main_min h5{
  margin-bottom: 0;
  margin-top: 10px;
  font-size: 24px;
 }  
 
-.main_div a{
-    text-decoration: none;
-    color: black;
-}
 
 .down_a{
     display: flex;
     justify-content: end;
     font-size: $fs-s;
+    margin-top: 10px;
+    margin-bottom: 0;
+    padding: 0;
 }
 
 .down_a a{
