--- a/src/sass/layout/_back.aside.scss
+++ b/src/sass/layout/_back.aside.scss
@@ -1,10 +1,11 @@
-.aside{
+.b_aside{
     background-color: $color_G;
     width: 20%;
     height: 100vh;
     align-items: center;
     position: fixed;
-    @include borderTest(); //測試線
+    top: 0;
+    // @include borderTest(); //測試線
     .logo{
         width: 185px;
         margin: 60px auto;
