--- a/src/sass/style.back.scss
+++ b/src/sass/style.back.scss
@@ -7,3 +7,4 @@
 @import 'layout/back.aside';
 @import 'backpages/member_mg';
 @import 'backpages/back_login';
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
