--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,3 +12,4 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
 @import './frontpages/news.scss';
 @import './frontpages/news_in.scss';
+@import './frontpages/animal';
