--- a/src/sass/frontpages/_animal.scss
+++ b/src/sass/frontpages/_animal.scss
@@ -13,6 +13,8 @@
 .map{
     height: auto;
     width: 100%;
+    margin-top: 30px;
+    margin-bottom: 80px;
 }
 
 .icon_map_r{
@@ -21,12 +23,13 @@
     margin:auto;
 }
 
+// translateX
 @keyframes swing{
-    15%{transform: translateX(5px);} 
-    40%{transform: translateX(-5px);}
-    65%{transform: translateX(2px);}
-    85%{transform: translateX(-2px);}
-    100%{transform: translateX(0px);}
+    15%{transform: rotate(10deg);} 
+    40%{transform: rotate(-10deg);}
+    65%{transform: rotate(5deg);}
+    85%{transform: rotate(-5deg);}
+    100%{transform: rotate(0deg);}
 }
 
 .button_f1 a{
@@ -41,6 +44,7 @@
     top:calc(100vw*(566.65)/1440);
     left: calc(100vw*(637.94)/1440);
     animation: swing 1s infinite ;
+    transform-origin: bottom;
    
 }
 
@@ -50,6 +54,7 @@
     top:calc(100vw*(23.04)/1440);
     left: calc(100vw*(358.76)/1440);
     animation: swing 1s infinite ;
+    transform-origin: bottom;
 }
 
 
@@ -59,6 +64,7 @@
     top:calc(100vw*(145.53)/1440);
     left: calc(100vw*(761.61)/1440);
     animation: swing 1s infinite ;
+    transform-origin: bottom;
 }
 
 .icon_horse{
@@ -67,6 +73,7 @@
     top:calc(100vw*(556.65)/1440);
     left: calc(100vw*(259.58)/1440);
     animation: swing 1s infinite ;
+    transform-origin: bottom;
 }
 
 .icon_pig{
@@ -75,6 +82,7 @@
     top:calc(100vw*(268.02)/1440);
     left: calc(100vw*(1086.09)/1440);
     animation: swing 1s infinite ;
+    transform-origin: bottom;
 }
 
 .icon_deer{
@@ -83,6 +91,7 @@
     top:calc(100vw*(321.38)/1440);
     left: calc(100vw*(33.06)/1440);
     animation: swing 1s infinite ;
+    transform-origin: bottom;
 }
 
 .item{
@@ -90,18 +99,21 @@
     flex-wrap: wrap;
     justify-content: center;
     position: relative;
-    padding-top: 20px;
+    margin-bottom: 20px;
 }
 
 
-section{
-    display: flex;
-} 
 
-section:nth-child(odd) {
-    background-color: rgb(177, 177, 177);
-    flex-direction: row-reverse;
-}  
+
+// section{
+//     display: flex;
+//     justify-content: center;
+// } 
+
+// section:nth-child(odd) {
+//     background-color: rgb(177, 177, 177);
+//     flex-direction: row-reverse;
+// }  
 
 
 
@@ -121,23 +133,23 @@ section:nth-child(odd) img{
     flex-direction: row-reverse;
 }  */
 
-.item_img{
-    /* width:calc(100vw*427/1440); */
-}
 
-.item_p{
-    margin-top: 110px;
-}
 
-.item_title{
-
-}
 
 .item_desc{
     width: 450px;
     height: 200px;
 }
 
+
+.item_img{
+    /* width:calc(100vw*427/1440); */
+    margin: 0px 40px 40px 0px;
+}
+
+.item_p{
+    margin: 110px 20px 20px 0px;
+}
 
 
 @media screen and (max-width: 575.98px){
@@ -147,11 +159,34 @@ section:nth-child(odd) img{
     
 }  
 
-@media screen and (max-width: 940px){
+
+
+@media screen and (min-width: 995px){
+    section:nth-child(odd){
+        .item{  
+            background-color: rgb(226, 180, 180);
+                .item_img{
+                    order: 2;
+                    background-color: rgb(228, 90, 90);
+                }
+                .item_p{
+                    order: 1;
+                    margin: 100px 0px 0px 0px;
+                }
+        }
+    }
+} 
+
+@media screen and (max-width: 1200px){
     .item_p{
-        padding-top: 0px;
-        margin-top: 0px;
+        margin: 0px 0px 0px 0px;
+        background-color: rgb(166, 230, 224);
+    }
+    .item_img{
+        margin: 0px 0px 0px 0px;
     }
     
 }  
+
+
 
