--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,5 +10,5 @@
 @import 'frontpages/index';
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
-@import './frontpages/news.scss';
-@import './frontpages/news_in.scss';
+@import './frontpages/_news.scss';
+@import './frontpages/_news_in.scss';
