feat: 漢堡選單按mask收合

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -178,7 +178,7 @@
     
                 .menuTitle{
                     text-align: center;
-                    color: $color_G;
+                    color: $color_B;
                     margin-top: 20px;
 
                     @include pad{
