--- a/src/layout/back_aside.html
+++ b/src/layout/back_aside.html
@@ -1,6 +1,6 @@
 <aside class="b_aside">
     <ul>
-        <img src="../img/logo_white.svg" class="logo">
+        <a href="../back_index.html"><img src="../img/logo_white.svg" class="logo"></a>
         <li><a href="../member_mg.html">會員查詢</a></li>
         <li><a href="#">最新消息管理</a></li>
         <li><a href="#">商品管理</a></li>
