--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -4,6 +4,16 @@
         <div class="navRight">
             <a href="#" class="head-icon"><i class="bi bi-cart2 cartIcon"><span class="cartCount">1</span></i></a>
             <a href="member.html" class="head-icon"><i class="bi bi-person memberIcon"></i></a>
+
+            <!-- 登入彈跳視窗 -->
+            <!-- <form action="">
+                <h2>登入</h2>
+                電子郵件
+                <input type="text">
+                密碼
+                <input type="text">
+            </form> -->
+
             <nav class="ham_sel">
                 <div class="ham_btn">
                     <span class="ham_line ham_line_1"></span>
