feat:更新checkout.html頁面

--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -9,6 +9,18 @@
                 <span class="ham_line ham_line_2"></span>
                 <span class="ham_line ham_line_3"></span>
             </div>
+            
+            <!-- 購物車彈跳窗 -->
+            <!-- <div class="blackBg">
+                <div class="shoppingCar">
+                    <div class="carTitle">購物車明細</div>
+                    <ul>
+                        <li><p>商品名稱</p><p>價格</p><p>數量</p><p>小計</p></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>  -->
+
             <nav class="hamSel">
                 <ul id="appMenu" class="hamMenu">
                     <template v-for="menu in menus" v-for="menuLink in menuLinks">
