--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -74,24 +74,24 @@
                     transition: .5s;
                 }
                 //======= 購物車明細 =======
-                // .blackBg{
-                //     width: 100%;
-                //     height: 100%;   
-                // }
-                // .shoppingCar{
-                //     @include positionCenter();
-                //     width: 970px;
-                // }
-                // .carTitle{
-                //     background-color: $color_Y;
-                //     font-size: $fs-l;
-                //     color: $color_W;
-                //     width: 970px;
+                .blackBg{
+                    width: 100%;
+                    height: 100%;   
+                }
+                .shoppingCar{
+                    @include positionCenter();
+                    width: 970px;
+                }
+                .carTitle{
+                    background-color: $color_Y;
+                    font-size: $fs-l;
+                    color: $color_W;
+                    width: 970px;
 
-                // }
-                // .carTitle > ul{
-                //     display: flex;
-                // }
+                }
+                .carTitle > ul{
+                    display: flex;
+                }
                 //===================================
                 .memberIcon{
                     font-size: 36px;
@@ -235,6 +235,7 @@
         z-index: 700;
         opacity: 0;
         transition: .6s;
+        display: none;
     }
 
     .hamMask.-on{
