--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,4 +13,5 @@
 @import './frontpages/news.scss';
 @import './frontpages/news_in.scss';
 @import './frontpages/animal';
+@import './frontpages/checkout.scss'
 // @import './frontpages/product_detail.scss';
