feat: header.js 導覽列遮罩改寫

--- a/src/sass/base/_utility.scss
+++ b/src/sass/base/_utility.scss
@@ -8,8 +8,8 @@ body{
     font-family: $fontfamily;
 }
 
-.wrapper{
-    width: 1200px;
-    margin: 0 auto;
-    padding: 0 10px;
-}
+// .wrapper{
+//     width: 1140px;
+//     margin: 0 auto;
+//     padding: 0 10px;
+// }
