--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -235,12 +235,13 @@
         z-index: 700;
         opacity: 0;
         transition: .6s;
-        display: none;
+        // display: none;
     }
 
     .hamMask.-on{
         backdrop-filter: blur(2px);
         background-color: rgba(51, 51, 51, 0.1);
         opacity: 1;
+        // display: block;
     }
 }
