fix: 導覽列mask初始為display:none

--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -9,7 +9,7 @@
                 <span class="ham_line ham_line_2"></span>
                 <span class="ham_line ham_line_3"></span>
             </div>
-            
+
             <!-- 購物車彈跳窗 -->
             <!-- <div class="blackBg">
                 <div class="shoppingCar">
@@ -34,9 +34,9 @@
                         </li>
                     </template>
                 </ul>
-                
-            </nav>   
+
+            </nav>
         </div>
     </nav>
-    <div class="hamMask"></div>
+    <div class="hamMask" style="display: none;"></div>
 </header>
