feat: 導覽列完成

--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -38,5 +38,5 @@
             </nav>
         </div>
     </nav>
-    <div class="hamMask" style="display: none;"></div>
+    <div class="hamMask" style="opacity: 0;"></div>
 </header>
