--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -235,7 +235,7 @@
         z-index: 700;
         opacity: 0;
         transition: .6s;
-        // display: none;
+        display: none;
     }
 
     .hamMask.-on{
