style: 修改 _var.scss fontfamily

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -54,7 +54,7 @@ p{
 //英文字
 h6{
     font-size: $fs-2xl;
-    font-family: $fontfamily;
+    font-family: map-get($fontfamily, "eng");
 
     @include mobile{
         font-size: $fs-xl;
