--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,6 +1,7 @@
 h2{
     font-size: $fs-xl;
     letter-spacing: $letter-spacing-6;
+    font-weight: 500;
 
     @include mobile{
         font-size: $fs-m;
@@ -11,6 +12,7 @@ h2{
 h3{
     font-size: $fs-l;
     letter-spacing: $letter-spacing-3;
+    font-weight: 500;
 
     @include mobile{
         font-size: $fs-s;
