--- a/src/sass/backpages/_back_index.scss
+++ b/src/sass/backpages/_back_index.scss
@@ -13,20 +13,49 @@ h4{
 //ul
 .bi_fuc{
     display: flex;
-    width: 200px;
-    border: 1px solid green;
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    border: 1px solid $color_G;
+    // background-color: $color_G;
+    // vertical-align : middle;
+    // @include  marginCenter();
+    // border: 1px solid green;
     
     
 }
 
 .bi_fuc > li{
-    width: 400px;
-    height: 400px;
-    border: 1px solid red;
+    border: 1px solid $color_G;
+    width: 200px;
+    height: 200px;
+    
+    
+    // border: 1px solid red;
+}
+.bi_fuc > li a{
+    color: $color_B;
 }
 
 .bi_fuc img{
     border: 1px solid rgb(0, 0, 0);
     width: 100px;
     display: block;
+    margin: 30px auto;
+
+    
+}
+
+
+
+.bi_fuc li:hover{
+    background-color: $color_G;
+    // color: $color_W;
+    cursor: pointer;
+}
+
+.bi_fuc li:hover a{
+    // background-color: $color_G;
+    color: $color_W;
+    cursor: pointer;
 }
